@startuml

title __REQUESTEXAMS's Class Diagram__\n

  namespace ExamReviewer {
    namespace RequestExams {
      abstract class ExamReviewer.RequestExams.RequestExams {
          # StudentAnswers : ArrayList<ArrayList<AnswerXStudentXItemXExam>>
          # exam : Exam
          + ExtractExam()
          + ExtractExam()
          + RequestExams()
          + getExam()
          + getSimplifiedScore()
          + getStudentAnswers()
          + saveStudenAnswers()
      }
    }
  }
  

  namespace ExamReviewer {
    namespace RequestExams {
      class ExamReviewer.RequestExams.RequestExamsToClient {
          - client : Client
          + ExtractExam()
          + RequestExamsToClient()
          + saveStudenAnswers()
      }
    }
  }
  

  namespace ExamReviewer {
    namespace RequestExams {
      class ExamReviewer.RequestExams.RequestExamsToLocal {
          + ExtractExam()
          + RequestExamsToLocal()
      }
    }
  }
  

  ExamReviewer.RequestExams.RequestExamsToClient -up-|> ExamReviewer.RequestExams.RequestExams
  ExamReviewer.RequestExams.RequestExamsToLocal -up-|> ExamReviewer.RequestExams.RequestExams


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
